# djinni

src/: .gitignore
src/source/: JNIMarshal.scala  Main.scala  Marshal.scala  ObjcMarshal.scala  RustGenerator.scala  RustJNIGenerator.scala  RustMarshal.scala  ast.scala  generator.scala  meta.scala  parser.scala
support-lib/rust/: jni_ffi.rs  main.rs  mod.rs  support.rs
test-suite/: Makefile  run_djinni.sh
test-suite/djinni/: client_interface.djinni  constants.djinni  exception.djinni  test.djinni  user_token.djinni
test-suite/generated-src/: outFileList.txt
test-suite/generated-src/cpp/: client_interface.hpp  test_helpers.hpp
test-suite/generated-src/jni/: NativeTestHelpers.cpp
test-suite/generated-src/objc/: DBClientInterface.h  DBTestHelpers+Private.mm  DBTestHelpers.h
test-suite/generated-src/rust/: AssortedPrimitives.rs  Cargo.toml  ClientInterface.rs  ClientReturnedRecord.rs  Constants.rs  ConstantsInterface.rs  CppException.rs  DateRecord.rs  DummyInterface.rs  EmptyRecord.rs  mod.rs  (+19 more)
test-suite/generated-src/rust-jni/: AssortedPrimitives.rs  ClientInterface.rs  Color.rs  ConstantsInterface.rs  DateRecord.rs  EmptyRecord.rs  MapListRecord.rs  MapRecord.rs  PrimitiveList.rs  SetRecord.rs  StaticNullityInterface.rs  TestHelpers.rs  UserToken.rs
test-suite/handwritten-src/rust/: Cargo.toml
test-suite/handwritten-src/rust/src/: cpp_exception.rs  cpp_exception_impl.rs  dummy_interface_impl.rs  generated_rust  generated_rust_jni  lib.rs  static_nullity_interface.rs  support_lib  test_helpers.rs
test-suite/java/: build.xml  compile_rust_djinni.sh
(+63 files in other folders)
