[package]
name = "djinni_test_suite"
version = "0.1.0"

[lib]
name = "djinni_test_suite"
path = "src/lib.rs"
crate_type = ["dylib"]

[dependencies]
libc = "0.1.0"

#[dependencies.djinni_rust_generated]
#path = "../../generated-src/rust"
#
#[dependencies.djinni_rust_jni_generated]
#path = "../../generated-src/rust_jni"
